--- a/package.json
+++ b/package.json
@@ -30,5 +30,9 @@
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.0.0",
 		"vite": "^5.0.3"
+	},
+	"dependencies": {
+		"@types/jsdom": "^21.1.7",
+		"jsdom": "^25.0.1"
 	}
 }
