--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "fortuna-2",
+	"name": "tabletuna-svelte",
 	"version": "0.0.1",
 	"type": "module",
 	"scripts": {
@@ -32,7 +32,9 @@
 		"vite": "^5.0.3"
 	},
 	"dependencies": {
+		"@types/dompurify": "^3.0.5",
 		"@types/jsdom": "^21.1.7",
+		"dompurify": "^3.1.7",
 		"jsdom": "^25.0.1"
 	}
 }
