--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
+		"cloudflare": "ADAPTER=cloudflare vite build",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
@@ -13,6 +14,7 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^3.0.0",
+		"@sveltejs/adapter-cloudflare": "^4.7.4",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
 		"@types/eslint": "^9.6.0",
@@ -32,9 +34,6 @@
 		"vite": "^5.0.3"
 	},
 	"dependencies": {
-		"@types/dompurify": "^3.0.5",
-		"@types/jsdom": "^21.1.7",
-		"dompurify": "^3.1.7",
-		"jsdom": "^25.0.1"
+		"htmlparser2": "^9.1.0"
 	}
 }
